--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Hacker News</title>
 		<style>
 			body {
-				background-color: hsl(0, 0%, 10%);
+				background-color: #00001f;
 			}
 		</style>
 	</head>
